Salesforce/force-app/main/default/objects/Discovery_Application__c/Discovery_Application__c.object-meta.xml
<CustomObject>
    <label>Discovery Application</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Discovery Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>