Salesforce/force-app/main/default/objects/Discovery_Application__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All Physician Jobs</fullName>
            </value>
            <value>
                <fullName>Candidate Referral</fullName>
            </value>
            <value>
                <fullName>CareerMD</fullName>
            </value>
            <value>
                <fullName>CINDI email</fullName>
            </value>
            <value>
                <fullName>CINDI phone call</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Cold Email</fullName>
            </value>
            <value>
                <fullName>Curative Digest</fullName>
            </value>
            <value>
                <fullName>Curative Website</fullName>
            </value>
            <value>
                <fullName>CVC Website</fullName>
            </value>
            <value>
                <fullName>DentistJobCafe</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>DocCafe</fullName>
            </value>
            <value>
                <fullName>Doximity</fullName>
            </value>
            <value>
                <fullName>ED Physician</fullName>
            </value>
            <value>
                <fullName>Email Blast Response</fullName>
            </value>
            <value>
                <fullName>ENP Network</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fidelis Website</fullName>
            </value>
            <value>
                <fullName>Glassdoor</fullName>
            </value>
            <value>
                <fullName>Google for jobs</fullName>
            </value>
            <value>
                <fullName>Healthecareers</fullName>
            </value>
            <value>
                <fullName>Hired Nurses</fullName>
            </value>
            <value>
                <fullName>Indeed</fullName>
            </value>
            <value>
                <fullName>Jobvertise</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Locumtenens.com</fullName>
            </value>
            <value>
                <fullName>MDJobSite</fullName>
            </value>
            <value>
                <fullName>Medestar Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>