Salesforce/force-app/main/default/objects/Discovery_Application__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Discovery Applications</relationshipLabel>
    <relationshipName>Discovery_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>