Salesforce/force-app/main/default/objects/Discovery_Application__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>